--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -34,7 +34,7 @@ jobs:
         env:
           fail-fast: true
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Start mysql service
         run: sudo /etc/init.d/mysql start
@@ -79,31 +79,54 @@ jobs:
       DB_PASSWORD: root
       MAIL_MAILER: log
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
       - name: Prepare The Environment
         run: cp .env.dusk.ci .env
+
       - name: Create Database
         run: |
           sudo systemctl start mysql
           mysql --user="root" --password="root" -e "CREATE DATABASE \`yaffa\` character set UTF8mb4 collate utf8mb4_bin;"
+
       - name: Install Composer Dependencies
         run: composer install --no-progress --prefer-dist --optimize-autoloader
+
       - name: Generate Application Key
         run: php artisan key:generate
+
       - name: Upgrade Chrome Driver
         run: php artisan dusk:chrome-driver --detect
+
       - name: Start Chrome Driver
         run: ./vendor/laravel/dusk/bin/chromedriver-linux &
+
+      - name: Cache NPM Dependencies
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node-
+
+      - name: Install NPM Dependencies
+        run: npm install
+
+      - name: Build Assets
+        run: npm run dev
+
       - name: Run Laravel Server
         run: php artisan serve --no-reload &
+
       - name: Run Dusk Tests
         run: php artisan dusk
+
       - name: Upload Screenshots
         if: failure()
         uses: actions/upload-artifact@v3
         with:
           name: screenshots
           path: tests/Browser/screenshots
+
       - name: Upload Console Logs
         if: failure()
         uses: actions/upload-artifact@v3
